--- a/react/{{cookiecutter.project_slug}}/package.json
+++ b/react/{{cookiecutter.project_slug}}/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tgit-octotree",
+  "name": "{{ cookiecutter.project_slug }}",
   "private": true,
   "version": "0.0.0",
   "type": "module",
